--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,186 +1,184 @@
 {
-   "unknown": "Không xác định",
-   "add_new_car":"Thêm xe mới",
-   "login":"Đăng nhập",
+   "unknown": "Unknown",
+   "add_new_car":"Add new car",
+   "login":"Login",
    "email":"Email",
-   "password": "Mật khẩu",
-   "forgot_password":"Quên mật khẩu",
-   "register":"Đăng ký",
-   "notification":"Thông báo",
-   "change_password":"Đổi mật khẩu",
-   "logout":"Đăng xuất",
-   "continue_my":"Tiếp tục",
-   "processing_the_request":"Đang xử lý yêu cầu...",
-   "please_wait_a_moment":"Vui lòng đợi trong giây lát!",
-   "success":"Thành công",
-   "fail":"Thất bại",
-   "warning":"Cảnh báo",
-   "this_account_is_invalid":"Tài khoản không hợp lệ",
-   "invalid_phone_number":"Số điện thoại không hợp lệ",
-   "password_must_be_at_least_6_characters":"Mật khẩu phải có ít nhất 6 ký tự",
-   "name_cannot_be_left_blank":"Họ tên không được để trống",
-   "login_has_expired":"Đăng nhập đã hết hạn",
-   "press_again_to_exit":"Nhấn thêm lần nữa để thoát",
-   "full_name":"Họ và tên",
-   "account_information":"Thông tin tài khoản",
-   "policy_terms":"Điều khoản chính sách",
-   "save":"Lưu",
-   "an_error_occurred":"Có lỗi xảy ra. Vui lòng thử lại!",
-   "home_page":"Trang chủ",
-   "introduce":"Giới thiệu",
-   "enter_full_name":"Nhập họ và tên",
-   "enter_your_email":"Nhập email của bạn",
-   "enter_your_password":"Nhập mật khẩu của bạn",
-   "password_not_match":"Mật khẩu không khớp",
-   "login_session_expired_please_login_again":"Phiên đăng nhập hết hạn, hãy đăng nhập lại!",
-   "ok":"OK",
-   "new_photo_shoot":"Chụp ảnh mới",
-   "new_video_recoding":"Quay video mới",
-   "pick_file":"Chọn file",
-   "pick_photo":"Chọn ảnh có sẵn",
-   "go_to_setting":"Đi đến cài đặt",
-   "you_have_not_granted_access_to_photos":"Bạn chưa cấp quyền truy cập vào ảnh?",
-   "an_error_occurred":"Có lỗi xảy ra!",
-   "enter_number_phone_or_license_plates":"Nhập số điện thoại hoặc biển số",
-   "phone":"Điện thoại",
-   "enter_phone":"Nhập điện thoại",
-   "license_plates":"Biển số",
-   "enter_license_plates":"Nhập biển số",
-   "you_must_enter_your_phone_number_or_license_plates":"Bạn phải nhập số điện thoại hoặc biển số",
-   "check":"KIỂM TRA",
-   "add_success":"Thêm mới thành công!",
-   "please_enter_all_required_fields":"Hãy nhập đủ các trường bắt buộc (*)",
-   "select":"Chọn",
-   "go":"Đi",
-   "cancel":"Huỷ",
-   "preview_image":"Xem trước hình ảnh",
-   "car_brand":"Hãng xe",
-   "car_series":"Dòng xe",
-   "version":"Phiên bản",
-   "year_of_manufacture":"Năm sản xuất",
-   "car_class":"Hạng xe",
-   "style":"Kiểu dáng",
-   "close":"Đóng",
-   "number_seats":"Số chỗ",
-   "call_operator":"Gọi điện tổng đài",
-   "call_ended":"Cuộc gọi đã kết thúc",
-   "account_verification":"Xác thực tài khoản",
-   "please_enter_the_otp_sent_to_the_email":"Vui lòng nhập mã OTP được gửi đến email:",
-   "have_not_received_the_code":"Chưa nhận được mã?",
-   "send_again":" Gửi lại",
-   "confirm":"Xác nhận",
-   "verification_codes":"Mã xác thực",
-   "update_password_successful":"Cập nhật mật khẩu thành công!",
-   "update_password":"Cập nhật mật khẩu",
-   "enter_a_new_password_to_log_into_your_account":"Nhập mật khẩu mới để đăng nhập tài khoản",
-   "password_not_match":"Mật khẩu không trùng khớp!",
-   "completed":"Hoàn thành",
-   "enter_password_again":"Nhập lại mật khẩu",
-   "forgot_password":"Quên mật khẩu",
-   "please_enter_email_register_account":"Vui lòng nhập email đăng ký tài khoản",
+   "password": "Password",
+   "forgot_password":"Forgot password",
+   "register":"Register",
+   "notification":"Notification",
+   "change_password":"Change password",
+   "logout":"Logout",
+   "continue_my":"Continue",
+   "processing_the_request":"Processing request...",
+   "please_wait_a_moment":"Please wait a moment!",
+   "success":"Success",
+   "fail":"fail",
+   "warning":"Warning",
+   "this_account_is_invalid":"Invalid account",
+   "invalid_phone_number":"Invalid phone number",
+   "password_must_be_at_least_6_characters":"Password must be at least 6 characters",
+   "name_cannot_be_left_blank":"Name cannot be empty",
+   "login_has_expired":"Login has expired",
+   "press_again_to_exit":"Press one more time to exit",
+   "full_name":"Full name",
+   "account_information":"Account information",
+   "policy_terms":"Policy terms",
+   "save":"Save",
+   "an_error_occurred":"An error occurred. Please try again!",
+   "home_page":"Home",
+   "introduce":"Introduction",
+   "enter_full_name":"Enter first and last name",
+   "enter_your_email":"Enter your email",
+   "enter_your_password":"Enter your password",
+   "password_not_match":"Password does not match",
+   "login_session_expired_please_login_again":"Login session expired, please login again!",
+   "ok": "OK",
+   "new_photo_shoot":"Take a new photo",
+   "new_video_recoding":"Record a new video",
+   "pick_file":"Select file",
+   "pick_photo":"Select an existing photo",
+   "go_to_setting":"Go to settings",
+   "you_have_not_granted_access_to_photos":"Haven't you granted permission to access the photos?",
+   "an_error_occurred":"An error occurred!",
+   "enter_number_phone_or_license_plates":"Enter phone number or number plate",
+   "phone":"Phone",
+   "enter_phone":"Enter phone",
+   "license_plates":"Number plate",
+   "enter_license_plates":"Enter number plate",
+   "you_must_enter_your_phone_number_or_license_plates":"You must enter a phone number or license plate",
+   "check":"CHECK",
+   "add_success":"Add new successfully!",
+   "please_enter_all_required_fields":"Please enter all required fields (*)",
+   "select":"Select",
+   "go":"Go",
+   "cancel":"Cancel",
+   "preview_image":"Preview image",
+   "car_brand":"Car brand",
+   "car_series":"car series",
+   "version":"Version",
+   "year_of_manufacture":"Year of manufacture",
+   "car_class":"Car class",
+   "style":"Style",
+   "close":"Close",
+   "number_seats":"Number of seats",
+   "call_operator":"Call operator",
+   "call_ended":"Call ended",
+   "account_verification":"Account verification",
+   "please_enter_the_otp_sent_to_the_email":"Please enter the OTP sent to email:",
+   "have_not_received_the_code":"Didn't receive the code?",
+   "send_again":"Resend","confirm":"Confirm",
+   "verification_codes":"Verification code",
+   "update_password_successful":"Password update successful!",
+   "update_password":"Update password",
+   "enter_a_new_password_to_log_into_your_account":"Enter a new password to log into your account",
+   "password_not_match":"Password does not match!",
+   "completed":"Completed",
+   "enter_password_again":"Re-enter password",
+   "forgot_password":"Forgot password",
+   "please_enter_email_register_account":"Please enter your account registration email",
    "user":"User",
-   "change_address_application":"Đổi địa chỉ ứng dụng",
-   "check_the_information":"Kiểm tra lại thông tin",
-   "account":"Tài khoản",
-   "print_finger_face_id":"Vân tay, khuôn mặt",
-   "login_with_fingerprint_face_id":"Đăng nhập bằng vân tay, khuôn mặt",
-   "begin":"Trước",
-   "after":"Sau",
-   "you_have_not_granted_permission_to_access_the_photo":"Bạn chưa cấp quyền truy cập vào ảnh?",
-   "add_attachment":"Thêm đính kèm",
-   "delete_attachment":"Xoá đính kèm",
-   "see_attachment":"Xem đính kèm",
-   "select_attachment":"Chọn đính kèm",
-   "no_data":"Chưa có dữ liệu",
-   "add":"Thêm",
-   "individual":"cá nhân",
-   "organization":"tổ chức",
-   "new_data_added_successfully":"Thêm mới dữ liệu thành công!",
-   "the_amount_paid_cannot_be_greater_than_the_total_amount":"Số tiền đã thanh toán không được lớn hơn tổng tiền",
-   "discuss":"Thảo luận",
-   "come_back":"Quay lại",
-   "enter_content":"Nhập nội dung",
-   "check_in":"Check in",
-   "your_position":"Vị trí của bạn",
-   "check_in_again":"Check in lại",
-   "delete":"Xoá",
-   "location":"Vị trí",
-   "edit_information":"Sửa thông tin",
-   "update_data_successfully":"Cập nhật dữ liệu thành công!",
-   "click_to_sign":"Bấm để thực hiện ký",
-   "unpaid":"Chưa thanh toán",
-   "the_amount_cannot_be_greater_than_the_outstanding_amount":"Số tiền không được lớn hơn số tiền chưa thanh toán",
-   "rate_star_please":"Vui lòng đánh giá số sao",
-   "not_yet":"Chưa có",
-   "find":"Tìm",
-   "add_discuss":"Thêm thảo luận",
-   "edit":"Sửa",
-   "information":"Thông tin chung",
-   "are_you_sure_you_want_to_delete":"Bạn chắc chắn muốn xóa không?",
-   "total_amount":"Tổng tiền",
-   "select_product":"Chọn sản phẩm",
-   "find_product":"Tìm sản phẩm",
-   "code_product":"Mã sản phẩm",
-   "price":"Giá",
-   "dvt":"ĐVT",
+   "change_address_application":"Change application address",
+   "check_the_information":"Check the information",
+   "account":"Account",
+   "print_finger_face_id":"Fingerprint, face",
+   "login_with_fingerprint_face_id":"Login with fingerprint, face",
+   "begin":"Before",
+   "after":"After",
+   "you_have_not_granted_permission_to_access_the_photo":"Haven't you granted permission to access the photo?",
+   "add_attachment":"Add attachment",
+   "delete_attachment":"Delete attachment",
+   "see_attachment":"See attachment",
+   "select_attachment":"Select attachment",
+   "no_data":"No data yet",
+   "add":"Add",
+   "individual":"individual",
+   "organization":"organization",
+   "new_data_added_successfully":"New data added successfully!",
+   "the_amount_paid_cannot_be_greater_than_the_total_amount":"The amount paid cannot be greater than the total",
+   "discuss":"Discussion",
+   "come_back":"Back",
+   "enter_content":"Enter content",
+   "check_in":"Check-in",
+   "your_position":"Your position",
+   "check_in_again":"Check in again",
+   "delete":"Delete",
+   "location":"Location",
+   "edit_information":"Edit information",
+   "update_data_successfully":"Data update was successful!",
+   "click_to_sign":"Click to sign","unpaid":"Unpaid",
+   "the_amount_cannot_be_greater_than_the_outstanding_amount":"Amount cannot be greater than the outstanding amount",
+   "rate_star_please":"Please rate the number of stars",
+   "not_yet":"Not yet",
+   "find":"Find",
+   "add_discuss":"Add discussion",
+   "edit":"Edit",
+   "information":"General information",
+   "are_you_sure_you_want_to_delete":"Are you sure you want to delete?",
+   "total_amount":"Total amount",
+   "select_product":"Select product",
+   "find_product":"Find products",
+   "code_product":"Product code",
+   "price":"Price",
+   "dvt":"unit",
    "vat":"VAT",
-   "sale":"Giảm giá",
-   "enter_price_sale":"Nhập giảm giá",
-   "you_cannot_enter_a_discount_greater_than_the_price_of_the_product":"Bạn không được nhập giá giảm lớn hơn giá của sản phẩm",
-   "you_cannot_enter_more_than_100":"Bạn không được nhập quá 100%",
-   "enter":"Nhập",
-   "enter_price":"Nhập giá",
-   "sign":"Ký nhận",
-   "pay":"Thanh toán",
-   "call":"Gọi điện",
-   "detail":"Chi tiết",
-   "unread":"Chưa đọc",
-   "readed":"Đã đọc",
-   "delete_success": "Xoá thành công",
-   "enter_name_barcode_qr_code":"Nhập tên, barcode, qrcode",
-   "select_filter":"Chọn lọc",
-   "pick_filter":"Lựa chọn",
-   "sales":"Doanh số",
-   "real_revenue":"Thực thu",
-   "number_contract":"Số hợp đồng",
-   "report":"Báo cáo",
-   "turn_over":"Doanh số chung",
-   "sales_product":"Doanh số sản phẩm",
-   "employee_turnover":"Doanh số nhân viên",
-   "all_company":"Toàn công ty",
-   "all":"Tất cả",
-   "hide_details":"Ẩn chi tiết",
-   "undefined":"Chưa xác định",
-   "contract":"hợp đồng",
-   "done":"Xong",
-   "car":"xe",
+   "sale":"discount",
+   "enter_price_sale":"Enter discount",
+   "you_cannot_enter_a_discount_greater_than_the_price_of_the_product":"You cannot enter a discount greater than the price of the product",
+   "you_cannot_enter_more_than_100":"You cannot enter more than 100%",
+   "enter":"Enter",
+   "enter_price":"Enter price",
+   "sign":"Sign for receipt",
+   "pay":"Payment",
+   "call":"Make a call",
+   "detail":"Details",
+   "unread":"Unread",
+   "readed":"Readed",
+   "delete_success": "Delete successful",
+   "enter_name_barcode_qr_code":"Enter name, barcode, qrcode",
+   "select_filter":"Select",
+   "pick_filter":"Selection",
+   "sales":"Sales",
+   "real_revenue":"Really",
+   "number_contract":"Contract number",
+   "report":"Report",
+   "turn_over":"General sales",
+   "sales_product":"Sales of products",
+   "employee_turnover":"Employee turnover",
+   "all_company":"Company-wide",
+   "all":"All",
+   "hide_details":"Hide details",
+   "undefined":"Undefined",
+   "contract":"contract",
+   "done":"Done",
+   "car":"car",
    "check_out":"Check out",
-   "enter_current_password":"Nhập mật khẩu hiện tại",
-   "current_password":"Mật khẩu hiện tại",
-   "enter_your_new_password":"Nhập mật khẩu mới",
-   "new_password":"Mật khẩu mới",
-   "avatar":"Ảnh đại diện",
-   "number_phone":"Số điện thoại",
-   "address":"Địa chỉ",
-   "login_with_fingerprint_face_id":"Đăng nhập vân tay, khuôn mặt",
+   "enter_current_password":"Enter current password",
+   "current_password":"Current password",
+   "enter_your_new_password":"Enter a new password",
+   "new_password":"New password",
+   "avatar":"Available image",
+   "number_phone":"Phone number",
+   "address":"Address",
+   "login_with_fingerprint_face_id":"Face and fingerprint login",
    "no":"NO",
    "yes":"YES",
-   "login_fail_please_try_again":"Đăng nhập thất bại bạn vui lòng thử lại",
-   "the_device_has_not_setup_fingerprint_face":"Thiết bị chưa thiết lập vân tay, khuôn mặt",
-   "doing":"đang làm",
-   "client":"Khách hàng",
-   "action":"THAO TÁC",
-   "copy_success":"Sao chép thành công",
-   "copy":"Sao chép",
-   "select_type":"Chọn loại",
-   "you_can_only_choose":"Bạn chỉ được chọn",
-   "value":"giá trị",
-   "sign_again":"Ký lại",
-   "you_have_not_done_the_sign_yet":"Bạn chưa thực hiện ký!",
-   "electronic_signature":"Ký điện tử",
-   "have_not_granted_location_access":"Bạn chưa cấp quyền truy cập vào vị trí?",
-   "number":"Số",
-   "are_you_sure_you_want_to_sign_out":"Bạn chắc chắn muốn đăng xuất?",
-   "agree":"Đồng ý",
-   "enter_address_application_below":"Nhập địa chỉ ứng dụng bên dưới"
+   "login_fail_please_try_again":"Login failed, please try again",
+   "the_device_has_not_setup_fingerprint_face":"The device has not set up fingerprint, face",
+   "doing": "doing",
+   "client":"Client",
+   "action":"OPERATION",
+   "copy_success":"Copy successful",
+   "copy":"Copy",
+   "select_type":"Select type",
+   "you_can_only_choose":"You can only choose",
+   "value":"value",
+   "sign_again":"Sign again",
+   "you_have_not_done_the_sign_yet":"You haven't signed yet!",
+   "electronic_signature":"Electronic signature",
+   "have_not_granted_location_access":"Have you not granted location access?",
+   "number":"Number",
+   "are_you_sure_you_want_to_sign_out":"Are you sure you want to sign out?",
+   "agree":"agree",
+   "enter_address_application_below":"Enter the application address below"
 }
