language done final

--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -1,186 +1,186 @@
 {
-   "unknown": "Không xác định",
-   "add_new_car":"Thêm xe mới",
-   "login":"Đăng nhập",
-   "email":"Email",
-   "password": "Mật khẩu",
-   "forgot_password":"Quên mật khẩu",
-   "register":"Đăng ký",
-   "notification":"Thông báo",
-   "change_password":"Đổi mật khẩu",
-   "logout":"Đăng xuất",
-   "continue_my":"Tiếp tục",
-   "processing_the_request":"Đang xử lý yêu cầu...",
-   "please_wait_a_moment":"Vui lòng đợi trong giây lát!",
-   "success":"Thành công",
-   "fail":"Thất bại",
-   "warning":"Cảnh báo",
-   "this_account_is_invalid":"Tài khoản không hợp lệ",
-   "invalid_phone_number":"Số điện thoại không hợp lệ",
-   "password_must_be_at_least_6_characters":"Mật khẩu phải có ít nhất 6 ký tự",
-   "name_cannot_be_left_blank":"Họ tên không được để trống",
-   "login_has_expired":"Đăng nhập đã hết hạn",
-   "press_again_to_exit":"Nhấn thêm lần nữa để thoát",
-   "full_name":"Họ và tên",
-   "account_information":"Thông tin tài khoản",
-   "policy_terms":"Điều khoản chính sách",
-   "save":"Lưu",
-   "an_error_occurred":"Có lỗi xảy ra. Vui lòng thử lại!",
-   "home_page":"Trang chủ",
-   "introduce":"Giới thiệu",
-   "enter_full_name":"Nhập họ và tên",
-   "enter_your_email":"Nhập email của bạn",
-   "enter_your_password":"Nhập mật khẩu của bạn",
-   "password_not_match":"Mật khẩu không khớp",
-   "login_session_expired_please_login_again":"Phiên đăng nhập hết hạn, hãy đăng nhập lại!",
-   "ok":"OK",
-   "new_photo_shoot":"Chụp ảnh mới",
-   "new_video_recoding":"Quay video mới",
-   "pick_file":"Chọn file",
-   "pick_photo":"Chọn ảnh có sẵn",
-   "go_to_setting":"Đi đến cài đặt",
-   "you_have_not_granted_access_to_photos":"Bạn chưa cấp quyền truy cập vào ảnh?",
-   "an_error_occurred":"Có lỗi xảy ra!",
-   "enter_number_phone_or_license_plates":"Nhập số điện thoại hoặc biển số",
-   "phone":"Điện thoại",
-   "enter_phone":"Nhập điện thoại",
-   "license_plates":"Biển số",
-   "enter_license_plates":"Nhập biển số",
-   "you_must_enter_your_phone_number_or_license_plates":"Bạn phải nhập số điện thoại hoặc biển số",
-   "check":"KIỂM TRA",
-   "add_success":"Thêm mới thành công!",
-   "please_enter_all_required_fields":"Hãy nhập đủ các trường bắt buộc (*)",
-   "select":"Chọn",
-   "go":"Đi",
-   "cancel":"Huỷ",
-   "preview_image":"Xem trước hình ảnh",
-   "car_brand":"Hãng xe",
-   "car_series":"Dòng xe",
-   "version":"Phiên bản",
-   "year_of_manufacture":"Năm sản xuất",
-   "car_class":"Hạng xe",
-   "style":"Kiểu dáng",
-   "close":"Đóng",
-   "number_seats":"Số chỗ",
-   "call_operator":"Gọi điện tổng đài",
-   "call_ended":"Cuộc gọi đã kết thúc",
-   "account_verification":"Xác thực tài khoản",
-   "please_enter_the_otp_sent_to_the_email":"Vui lòng nhập mã OTP được gửi đến email:",
-   "have_not_received_the_code":"Chưa nhận được mã?",
-   "send_again":" Gửi lại",
-   "confirm":"Xác nhận",
-   "verification_codes":"Mã xác thực",
-   "update_password_successful":"Cập nhật mật khẩu thành công!",
-   "update_password":"Cập nhật mật khẩu",
-   "enter_a_new_password_to_log_into_your_account":"Nhập mật khẩu mới để đăng nhập tài khoản",
-   "password_not_match":"Mật khẩu không trùng khớp!",
-   "completed":"Hoàn thành",
-   "enter_password_again":"Nhập lại mật khẩu",
-   "forgot_password":"Quên mật khẩu",
-   "please_enter_email_register_account":"Vui lòng nhập email đăng ký tài khoản",
-   "user":"User",
-   "change_address_application":"Đổi địa chỉ ứng dụng",
-   "check_the_information":"Kiểm tra lại thông tin",
-   "account":"Tài khoản",
-   "print_finger_face_id":"Vân tay, khuôn mặt",
-   "login_with_fingerprint_face_id":"Đăng nhập bằng vân tay, khuôn mặt",
-   "begin":"Trước",
-   "after":"Sau",
-   "you_have_not_granted_permission_to_access_the_photo":"Bạn chưa cấp quyền truy cập vào ảnh?",
-   "add_attachment":"Thêm đính kèm",
-   "delete_attachment":"Xoá đính kèm",
-   "see_attachment":"Xem đính kèm",
-   "select_attachment":"Chọn đính kèm",
-   "no_data":"Chưa có dữ liệu",
-   "add":"Thêm",
-   "individual":"cá nhân",
-   "organization":"tổ chức",
-   "new_data_added_successfully":"Thêm mới dữ liệu thành công!",
-   "the_amount_paid_cannot_be_greater_than_the_total_amount":"Số tiền đã thanh toán không được lớn hơn tổng tiền",
-   "discuss":"Thảo luận",
-   "come_back":"Quay lại",
-   "enter_content":"Nhập nội dung",
-   "check_in":"Check in",
-   "your_position":"Vị trí của bạn",
-   "check_in_again":"Check in lại",
-   "delete":"Xoá",
-   "location":"Vị trí",
-   "edit_information":"Sửa thông tin",
-   "update_data_successfully":"Cập nhật dữ liệu thành công!",
-   "click_to_sign":"Bấm để thực hiện ký",
-   "unpaid":"Chưa thanh toán",
-   "the_amount_cannot_be_greater_than_the_outstanding_amount":"Số tiền không được lớn hơn số tiền chưa thanh toán",
-   "rate_star_please":"Vui lòng đánh giá số sao",
-   "not_yet":"Chưa có",
-   "find":"Tìm",
-   "add_discuss":"Thêm thảo luận",
-   "edit":"Sửa",
-   "information":"Thông tin chung",
-   "are_you_sure_you_want_to_delete":"Bạn chắc chắn muốn xóa không?",
-   "total_amount":"Tổng tiền",
-   "select_product":"Chọn sản phẩm",
-   "find_product":"Tìm sản phẩm",
-   "code_product":"Mã sản phẩm",
-   "price":"Giá",
-   "dvt":"ĐVT",
-   "vat":"VAT",
-   "sale":"Giảm giá",
-   "enter_price_sale":"Nhập giảm giá",
-   "you_cannot_enter_a_discount_greater_than_the_price_of_the_product":"Bạn không được nhập giá giảm lớn hơn giá của sản phẩm",
-   "you_cannot_enter_more_than_100":"Bạn không được nhập quá 100%",
-   "enter":"Nhập",
-   "enter_price":"Nhập giá",
-   "sign":"Ký nhận",
-   "pay":"Thanh toán",
-   "call":"Gọi điện",
-   "detail":"Chi tiết",
-   "unread":"Chưa đọc",
-   "readed":"Đã đọc",
-   "delete_success": "Xoá thành công",
-   "enter_name_barcode_qr_code":"Nhập tên, barcode, qrcode",
-   "select_filter":"Chọn lọc",
-   "pick_filter":"Lựa chọn",
-   "sales":"Doanh số",
-   "real_revenue":"Thực thu",
-   "number_contract":"Số hợp đồng",
-   "report":"Báo cáo",
-   "turn_over":"Doanh số chung",
-   "sales_product":"Doanh số sản phẩm",
-   "employee_turnover":"Doanh số nhân viên",
-   "all_company":"Toàn công ty",
-   "all":"Tất cả",
-   "hide_details":"Ẩn chi tiết",
-   "undefined":"Chưa xác định",
-   "contract":"hợp đồng",
-   "done":"Xong",
-   "car":"xe",
-   "check_out":"Check out",
-   "enter_current_password":"Nhập mật khẩu hiện tại",
-   "current_password":"Mật khẩu hiện tại",
-   "enter_your_new_password":"Nhập mật khẩu mới",
-   "new_password":"Mật khẩu mới",
-   "avatar":"Ảnh đại diện",
-   "number_phone":"Số điện thoại",
-   "address":"Địa chỉ",
-   "login_with_fingerprint_face_id":"Đăng nhập vân tay, khuôn mặt",
-   "no":"NO",
-   "yes":"YES",
-   "login_fail_please_try_again":"Đăng nhập thất bại bạn vui lòng thử lại",
-   "the_device_has_not_setup_fingerprint_face":"Thiết bị chưa thiết lập vân tay, khuôn mặt",
-   "doing":"đang làm",
-   "client":"Khách hàng",
-   "action":"THAO TÁC",
-   "copy_success":"Sao chép thành công",
-   "copy":"Sao chép",
-   "select_type":"Chọn loại",
-   "you_can_only_choose":"Bạn chỉ được chọn",
-   "value":"giá trị",
-   "sign_again":"Ký lại",
-   "you_have_not_done_the_sign_yet":"Bạn chưa thực hiện ký!",
-   "electronic_signature":"Ký điện tử",
-   "have_not_granted_location_access":"Bạn chưa cấp quyền truy cập vào vị trí?",
-   "number":"Số",
-   "are_you_sure_you_want_to_sign_out":"Bạn chắc chắn muốn đăng xuất?",
-   "agree":"Đồng ý",
-   "enter_address_application_below":"Nhập địa chỉ ứng dụng bên dưới"
+"unknown": "알 수 없음",
+"add_new_car":"새 차량 추가",
+"login":"로그인",
+"email":"이메일",
+"password": "비밀번호",
+"forgot_password":"비밀번호를 잊으셨나요",
+"register":"등록",
+"notification":"알림",
+"change_password":"비밀번호 변경",
+"logout":"로그아웃",
+"continue_my":"계속",
+"processing_the_request":"요청 처리 중...",
+"please_wait_a_moment":"잠시 기다려주십시오!",
+"success":"성공",
+"fail":"실패",
+"warning":"경고",
+"this_account_is_invalid":"이 계정은 유효하지 않습니다",
+"invalid_phone_number":"유효하지 않은 전화번호",
+"password_must_be_at_least_6_characters":"비밀번호는 최소 6자 이상이어야 합니다",
+"name_cannot_be_left_blank":"이름은 비워둘 수 없습니다",
+"login_has_expired":"로그인이 만료되었습니다",
+"press_again_to_exit":"종료하려면 다시 누르세요",
+"full_name":"성명",
+"account_information":"계정 정보",
+"policy_terms":"정책 약관",
+"save":"저장",
+"an_error_occurred":"오류가 발생했습니다. 다시 시도해주세요!",
+"home_page":"홈페이지",
+"introduce":"소개",
+"enter_full_name":"성명을 입력하세요",
+"enter_your_email":"이메일을 입력하세요",
+"enter_your_password":"비밀번호를 입력하세요",
+"password_not_match":"비밀번호가 일치하지 않습니다",
+"login_session_expired_please_login_again":"로그인 세션이 만료되었습니다. 다시 로그인하세요!",
+"ok":"확인",
+"new_photo_shoot":"새 사진 촬영",
+"new_video_recoding":"새 비디오 녹화",
+"pick_file":"파일 선택",
+"pick_photo":"사진 선택",
+"go_to_setting":"설정으로 이동",
+"you_have_not_granted_access_to_photos":"사진에 대한 접근 권한이 없습니다",
+"an_error_occurred":"오류가 발생했습니다!",
+"enter_number_phone_or_license_plates":"전화번호 또는 차량번호를 입력하세요",
+"phone":"전화번호",
+"enter_phone":"전화번호를 입력하세요",
+"license_plates":"차량번호",
+"enter_license_plates":"차량번호를 입력하세요",
+"you_must_enter_your_phone_number_or_license_plates":"전화번호 또는 차량번호를 입력해야 합니다",
+"check":"확인",
+"add_success":"추가 성공!",
+"please_enter_all_required_fields":"필수 필드를 모두 입력하세요 (*)",
+"select":"선택",
+"go":"이동",
+"cancel":"취소",
+"preview_image":"이미지 미리보기",
+"car_brand":"제조사",
+"car_series":"차종",
+"version":"버전",
+"year_of_manufacture":"제조년도",
+"car_class":"차량 등급",
+"style":"차량 스타일",
+"close":"닫기",
+"number_seats":"좌석 수",
+"call_operator":"전화로 문의하기",
+"call_ended":"통화 종료",
+"account_verification":"계정 인증",
+"please_enter_the_otp_sent_to_the_email":"이메일로 전송된 OTP를 입력하세요:",
+"have_not_received_the_code":"코드를 받지 못하셨나요?",
+"send_again":"다시 보내기",
+"confirm":"확인",
+"verification_codes":"인증 코드",
+"update_password_successful":"비밀번호 업데이트가 성공적으로 완료되었습니다!",
+"update_password":"비밀번호 업데이트",
+"enter_a_new_password_to_log_into_your_account":"계정에 로그인하기 위해 새로운 비밀번호를 입력하세요",
+"password_not_match":"비밀번호가 일치하지 않습니다!",
+"completed":"완료",
+"enter_password_again":"비밀번호를 다시 입력하세요",
+"forgot_password":"비밀번호를 잊으셨나요?",
+"please_enter_email_register_account":"등록한 계정의 이메일을 입력하세요",
+"user":"사용자",
+"change_address_application":"앱 주소 변경",
+"check_the_information":"정보 확인",
+"account":"계정",
+"print_finger_face_id":"지문 및 얼굴 인식",
+"login_with_fingerprint_face_id":"지문 및 얼굴 인식으로 로그인",
+"begin":"시작",
+"after":"이후",
+"you_have_not_granted_permission_to_access_the_photo":"사진에 대한 액세스 권한을 허용하지 않았습니다.",
+"add_attachment":"첨부 파일 추가",
+"delete_attachment":"첨부 파일 삭제",
+"see_attachment":"첨부 파일 보기",
+"select_attachment":"첨부 파일 선택",
+"no_data":"데이터 없음",
+"add":"추가",
+"individual":"개인",
+"organization":"조직",
+"new_data_added_successfully":"새 데이터가 성공적으로 추가되었습니다!",
+"the_amount_paid_cannot_be_greater_than_the_total_amount":"지불한 금액은 총액보다 크면 안 됩니다",
+"discuss":"토론",
+"come_back":"돌아가기",
+"enter_content":"내용 입력",
+"check_in":"체크인",
+"your_position":"현재 위치",
+"check_in_again":"재체크인",
+"delete":"삭제",
+"location":"위치",
+"edit_information":"정보 수정",
+"update_data_successfully":"데이터 업데이트가 성공적으로 완료되었습니다!",
+"click_to_sign":"클릭하여 서명",
+"unpaid":"미납",
+"the_amount_cannot_be_greater_than_the_outstanding_amount":"금액은 미납 금액보다 크면 안 됩니다",
+"rate_star_please":"별점을 부탁드립니다",
+"not_yet":"아직",
+"find":"찾기",
+"add_discuss":"토론 추가",
+"edit":"편집",
+"information":"정보",
+"are_you_sure_you_want_to_delete":"정말로 삭제하시겠습니까?",
+"total_amount":"총액",
+"select_product":"제품 선택",
+"find_product":"제품 찾기",
+"code_product":"제품 코드",
+"price":"가격",
+"dvt":"단위",
+"vat":"부가가치세",
+"sale":"할인",
+"enter_price_sale":"할인 가격 입력",
+"you_cannot_enter_a_discount_greater_than_the_price_of_the_product":"할인 가격은 제품 가격보다 크면 안 됩니다",
+"you_cannot_enter_more_than_100":"100을 초과할 수 없습니다",
+"enter":"입력",
+"enter_price":"가격 입력",
+"sign":"서명",
+"pay":"결제",
+"call":"전화",
+"detail":"세부 사항",
+"unread":"읽지 않음",
+"readed":"읽음",
+"delete_success": "성공적으로 삭제되었습니다",
+"enter_name_barcode_qr_code":"이름, 바코드, QR 코드를 입력하세요",
+"select_filter":"필터 선택",
+"pick_filter":"필터 선택",
+"sales":"판매",
+"real_revenue":"실제 수익",
+"number_contract":"계약 수",
+"report":"보고서",
+"turn_over":"매출액",
+"sales_product":"제품 판매",
+"employee_turnover":"직원 매출액",
+"all_company":"전체 회사",
+"all":"전체",
+"hide_details":"세부 사항 숨기기",
+"undefined":"정의되지 않음",
+"contract":"계약",
+"done":"완료",
+"car":"자동차",
+"check_out":"체크아웃",
+"enter_current_password":"현재 비밀번호를 입력하세요",
+"current_password":"현재 비밀번호",
+"enter_your_new_password":"새로운 비밀번호를 입력하세요",
+"new_password":"새로운 비밀번호",
+"avatar":"프로필 사진",
+"number_phone":"전화번호",
+"address":"주소",
+"login_with_fingerprint_face_id":"지문 및 얼굴 ID로 로그인",
+"no":"아니오",
+"yes":"예",
+"login_fail_please_try_again":"로그인 실패. 다시 시도하세요.",
+"the_device_has_not_setup_fingerprint_face":"디바이스에서 지문 또는 얼굴 인식을 설정하지 않았습니다",
+"doing":"진행 중",
+"client":"고객",
+"action":"동작",
+"copy_success":"성공적으로 복사되었습니다",
+"copy":"복사",
+"select_type":"유형 선택",
+"you_can_only_choose":"다음만 선택할 수 있습니다",
+"value":"값",
+"sign_again":"다시 서명",
+"you_have_not_done_the_sign_yet":"서명을 완료하지 않았습니다!",
+"electronic_signature":"전자 서명",
+"have_not_granted_location_access":"위치 접근 권한을 부여하지 않았습니다",
+"number":"번호",
+"are_you_sure_you_want_to_sign_out":"로그아웃하시겠습니까?",
+"agree":"동의",
+"enter_address_application_below":"아래에 앱 주소를 입력하세요"
 }
