--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,184 +1,185 @@
 {
-   "unknown": "Unknown",
-   "add_new_car":"Add new car",
-   "login":"Login",
-   "email":"Email",
-   "password": "Password",
-   "forgot_password":"Forgot password",
-   "register":"Register",
-   "notification":"Notification",
-   "change_password":"Change password",
-   "logout":"Logout",
-   "continue_my":"Continue",
-   "processing_the_request":"Processing request...",
-   "please_wait_a_moment":"Please wait a moment!",
-   "success":"Success",
-   "fail":"fail",
-   "warning":"Warning",
-   "this_account_is_invalid":"Invalid account",
-   "invalid_phone_number":"Invalid phone number",
-   "password_must_be_at_least_6_characters":"Password must be at least 6 characters",
-   "name_cannot_be_left_blank":"Name cannot be empty",
-   "login_has_expired":"Login has expired",
-   "press_again_to_exit":"Press one more time to exit",
-   "full_name":"Full name",
-   "account_information":"Account information",
-   "policy_terms":"Policy terms",
-   "save":"Save",
-   "an_error_occurred":"An error occurred. Please try again!",
-   "home_page":"Home",
-   "introduce":"Introduction",
-   "enter_full_name":"Enter first and last name",
-   "enter_your_email":"Enter your email",
-   "enter_your_password":"Enter your password",
-   "password_not_match":"Password does not match",
-   "login_session_expired_please_login_again":"Login session expired, please login again!",
-   "ok": "OK",
-   "new_photo_shoot":"Take a new photo",
-   "new_video_recoding":"Record a new video",
-   "pick_file":"Select file",
-   "pick_photo":"Select an existing photo",
-   "go_to_setting":"Go to settings",
-   "you_have_not_granted_access_to_photos":"Haven't you granted permission to access the photos?",
-   "an_error_occurred":"An error occurred!",
-   "enter_number_phone_or_license_plates":"Enter phone number or number plate",
-   "phone":"Phone",
-   "enter_phone":"Enter phone",
-   "license_plates":"Number plate",
-   "enter_license_plates":"Enter number plate",
-   "you_must_enter_your_phone_number_or_license_plates":"You must enter a phone number or license plate",
-   "check":"CHECK",
-   "add_success":"Add new successfully!",
-   "please_enter_all_required_fields":"Please enter all required fields (*)",
-   "select":"Select",
-   "go":"Go",
-   "cancel":"Cancel",
-   "preview_image":"Preview image",
-   "car_brand":"Car brand",
-   "car_series":"car series",
-   "version":"Version",
-   "year_of_manufacture":"Year of manufacture",
-   "car_class":"Car class",
-   "style":"Style",
-   "close":"Close",
-   "number_seats":"Number of seats",
-   "call_operator":"Call operator",
-   "call_ended":"Call ended",
-   "account_verification":"Account verification",
-   "please_enter_the_otp_sent_to_the_email":"Please enter the OTP sent to email:",
-   "have_not_received_the_code":"Didn't receive the code?",
-   "send_again":"Resend","confirm":"Confirm",
-   "verification_codes":"Verification code",
-   "update_password_successful":"Password update successful!",
-   "update_password":"Update password",
-   "enter_a_new_password_to_log_into_your_account":"Enter a new password to log into your account",
-   "password_not_match":"Password does not match!",
-   "completed":"Completed",
-   "enter_password_again":"Re-enter password",
-   "forgot_password":"Forgot password",
-   "please_enter_email_register_account":"Please enter your account registration email",
-   "user":"User",
-   "change_address_application":"Change application address",
-   "check_the_information":"Check the information",
-   "account":"Account",
-   "print_finger_face_id":"Fingerprint, face",
-   "login_with_fingerprint_face_id":"Login with fingerprint, face",
-   "begin":"Before",
-   "after":"After",
-   "you_have_not_granted_permission_to_access_the_photo":"Haven't you granted permission to access the photo?",
-   "add_attachment":"Add attachment",
-   "delete_attachment":"Delete attachment",
-   "see_attachment":"See attachment",
-   "select_attachment":"Select attachment",
-   "no_data":"No data yet",
-   "add":"Add",
-   "individual":"individual",
-   "organization":"organization",
-   "new_data_added_successfully":"New data added successfully!",
-   "the_amount_paid_cannot_be_greater_than_the_total_amount":"The amount paid cannot be greater than the total",
-   "discuss":"Discussion",
-   "come_back":"Back",
-   "enter_content":"Enter content",
-   "check_in":"Check-in",
-   "your_position":"Your position",
-   "check_in_again":"Check in again",
-   "delete":"Delete",
-   "location":"Location",
-   "edit_information":"Edit information",
-   "update_data_successfully":"Data update was successful!",
-   "click_to_sign":"Click to sign","unpaid":"Unpaid",
-   "the_amount_cannot_be_greater_than_the_outstanding_amount":"Amount cannot be greater than the outstanding amount",
-   "rate_star_please":"Please rate the number of stars",
-   "not_yet":"Not yet",
-   "find":"Find",
-   "add_discuss":"Add discussion",
-   "edit":"Edit",
-   "information":"General information",
-   "are_you_sure_you_want_to_delete":"Are you sure you want to delete?",
-   "total_amount":"Total amount",
-   "select_product":"Select product",
-   "find_product":"Find products",
-   "code_product":"Product code",
-   "price":"Price",
-   "dvt":"unit",
-   "vat":"VAT",
-   "sale":"discount",
-   "enter_price_sale":"Enter discount",
-   "you_cannot_enter_a_discount_greater_than_the_price_of_the_product":"You cannot enter a discount greater than the price of the product",
-   "you_cannot_enter_more_than_100":"You cannot enter more than 100%",
-   "enter":"Enter",
-   "enter_price":"Enter price",
-   "sign":"Sign for receipt",
-   "pay":"Payment",
-   "call":"Make a call",
-   "detail":"Details",
-   "unread":"Unread",
-   "readed":"Readed",
-   "delete_success": "Delete successful",
-   "enter_name_barcode_qr_code":"Enter name, barcode, qrcode",
-   "select_filter":"Select",
-   "pick_filter":"Selection",
-   "sales":"Sales",
-   "real_revenue":"Really",
-   "number_contract":"Contract number",
-   "report":"Report",
-   "turn_over":"General sales",
-   "sales_product":"Sales of products",
-   "employee_turnover":"Employee turnover",
-   "all_company":"Company-wide",
-   "all":"All",
-   "hide_details":"Hide details",
-   "undefined":"Undefined",
-   "contract":"contract",
-   "done":"Done",
-   "car":"car",
-   "check_out":"Check out",
-   "enter_current_password":"Enter current password",
-   "current_password":"Current password",
-   "enter_your_new_password":"Enter a new password",
-   "new_password":"New password",
-   "avatar":"Available image",
-   "number_phone":"Phone number",
-   "address":"Address",
-   "login_with_fingerprint_face_id":"Face and fingerprint login",
-   "no":"NO",
-   "yes":"YES",
-   "login_fail_please_try_again":"Login failed, please try again",
-   "the_device_has_not_setup_fingerprint_face":"The device has not set up fingerprint, face",
-   "doing": "doing",
-   "client":"Client",
-   "action":"OPERATION",
-   "copy_success":"Copy successful",
-   "copy":"Copy",
-   "select_type":"Select type",
-   "you_can_only_choose":"You can only choose",
-   "value":"value",
-   "sign_again":"Sign again",
-   "you_have_not_done_the_sign_yet":"You haven't signed yet!",
-   "electronic_signature":"Electronic signature",
-   "have_not_granted_location_access":"Have you not granted location access?",
-   "number":"Number",
-   "are_you_sure_you_want_to_sign_out":"Are you sure you want to sign out?",
-   "agree":"agree",
-   "enter_address_application_below":"Enter the application address below"
+"unknown": "Unknown",
+"add_new_car": "Add New Car",
+"login": "Log In",
+"email": "Email",
+"password": "Password",
+"forgot_password": "Forgot Password",
+"register": "Register",
+"notification": "Notification",
+"change_password": "Change Password",
+"logout": "Log Out",
+"continue_my": "Continue",
+"processing_the_request": "Processing the request...",
+"please_wait_a_moment": "Please wait a moment!",
+"success": "Success",
+"fail": "Fail",
+"warning": "Warning",
+"this_account_is_invalid": "This account is invalid",
+"invalid_phone_number": "Invalid phone number",
+"password_must_be_at_least_6_characters": "Password must be at least 6 characters",
+"name_cannot_be_left_blank": "Name cannot be left blank",
+"login_has_expired": "Login has expired",
+"press_again_to_exit": "Press again to exit",
+"full_name": "Full Name",
+"account_information": "Account Information",
+"policy_terms": "Policy Terms",
+"save": "Save",
+"an_error_occurred": "An error occurred. Please try again!",
+"home_page": "Home Page",
+"introduce": "Introduce",
+"enter_full_name": "Enter full name",
+"enter_your_email": "Enter your email",
+"enter_your_password": "Enter your password",
+"password_not_match": "Passwords do not match",
+"login_session_expired_please_login_again": "Login session expired. Please log in again!",
+"ok": "OK",
+"new_photo_shoot": "New Photo Shoot",
+"new_video_recoding": "New Video Recording",
+"pick_file": "Pick File",
+"pick_photo": "Pick Photo",
+"go_to_setting": "Go to Setting",
+"you_have_not_granted_access_to_photos": "You have not granted access to photos",
+"enter_number_phone_or_license_plates": "Enter phone number or license plates",
+"phone": "Phone",
+"enter_phone": "Enter phone",
+"license_plates": "License Plates",
+"enter_license_plates": "Enter license plates",
+"you_must_enter_your_phone_number_or_license_plates": "You must enter your phone number or license plates",
+"check": "Check",
+"add_success": "Add success",
+"please_enter_all_required_fields": "Please enter all required fields (*)",
+"select": "Select",
+"go": "Go",
+"cancel": "Cancel",
+"preview_image": "Preview Image",
+"car_brand": "Car Brand",
+"car_series": "Car Series",
+"version": "Version",
+"year_of_manufacture": "Year of Manufacture",
+"car_class": "Car Class",
+"style": "Style",
+"close": "Close",
+"number_seats": "Number of Seats",
+"call_operator": "Call Operator",
+"call_ended": "Call Ended",
+"account_verification": "Account Verification",
+"please_enter_the_otp_sent_to_the_email": "Please enter the OTP sent to the email:",
+"have_not_received_the_code": "Have not received the code?",
+"send_again": "Send again",
+"confirm": "Confirm",
+"verification_codes": "Verification Codes",
+"update_password_successful": "Update password successful!",
+"update_password": "Update Password",
+"enter_a_new_password_to_log_into_your_account": "Enter a new password to log into your account",
+"password_not_match": "Password does not match!",
+"completed": "Completed",
+"enter_password_again": "Re-enter password",
+"forgot_password": "Forgot password",
+"please_enter_email_register_account": "Please enter your account registration email",
+"user": "User",
+"change_address_application": "Change application address",
+"check_the_information": "Check the information",
+"account": "Account",
+"print_finger_face_id": "Fingerprint, face",
+"login_with_fingerprint_face_id": "Login with fingerprint, face",
+"begin": "Before",
+"after": "After",
+"you_have_not_granted_permission_to_access_the_photo": "Haven't you granted permission to access the photo?",
+"add_attachment": "Add attachment",
+"delete_attachment": "Delete attachment",
+"see_attachment": "See attachment",
+"select_attachment": "Select attachment",
+"no_data": "No data",
+"add": "Add",
+"individual": "individual",
+"organization": "organization",
+"new_data_added_successfully": "New data added successfully!",
+"the_amount_paid_cannot_be_greater_than_the_total_amount": "The amount paid cannot be greater than the total",
+"discuss": "Discussion",
+"come_back": "Back",
+"enter_content": "Enter content",
+"check_in": "Check-in",
+"your_position": "Your position",
+"check_in_again": "Check in again",
+"delete": "Delete",
+"location": "Location",
+"edit_information": "Edit information",
+"update_data_successfully": "Data update was successful!",
+"click_to_sign": "Click to sign",
+"unpaid": "Unpaid",
+"the_amount_cannot_be_greater_than_the_outstanding_amount": "Amount cannot be greater than the outstanding amount",
+"rate_star_please": "Please rate the number of stars",
+"not_yet": "Not yet",
+"find": "Find",
+"add_discuss": "Add discussion",
+"edit": "Edit",
+"information": "General information",
+"are_you_sure_you_want_to_delete": "Are you sure you want to delete?",
+"total_amount": "Total amount",
+"select_product": "Select product",
+"find_product": "Find products",
+"code_product": "Product code",
+"price": "Price",
+"dvt": "dvt",
+"vat": "VAT",
+"sale": "Discount",
+"enter_price_sale": "Enter discount",
+"you_cannot_enter_a_discount_greater_than_the_price_of_the_product": "You cannot enter a discount greater than the price of the product",
+"you_cannot_enter_more_than_100": "You cannot enter more than 100%",
+"enter": "Enter",
+"enter_price": "Enter price",
+"sign": "Sign for receipt",
+"pay": "Payment",
+"call": "Make a call",
+"detail": "Details",
+"unread": "Unread",
+"readed": "Readed",
+"delete_success": "Delete successful",
+"enter_name_barcode_qr_code": "Enter name, barcode, qrcode",
+"select_filter": "Select",
+"pick_filter": "Selection",
+"sales": "Sales",
+"real_revenue": "Really",
+"number_contract": "Contract number",
+"report": "Report",
+"turn_over": "General sales",
+"sales_product": "Sales of products",
+"employee_turnover": "Employee turnover",
+"all_company": "Company-wide",
+"all": "All",
+"hide_details": "Hide details",
+"undefined": "Undefined",
+"contract": "Contract",
+"done": "Done",
+"car": "Car",
+"check_out": "Check out",
+"enter_current_password": "Enter current password",
+"current_password": "Current password",
+"enter_your_new_password": "Enter a new password",
+"new_password": "New password",
+"avatar": "Available image",
+"number_phone": "Phone number",
+"address": "Address",
+"login_with_fingerprint_face_id": "Face and fingerprint login",
+"no": "NO",
+"yes": "YES",
+"login_fail_please_try_again": "Login failed, please try again",
+"the_device_has_not_setup_fingerprint_face": "The device has not set up fingerprint, face",
+"doing": "Doing",
+"client": "Client",
+"action": "OPERATION",
+"copy_success": "Copy successful",
+"copy": "Copy",
+"select_type": "Select type",
+"you_can_only_choose": "You can only choose",
+"value": "Value",
+"sign_again": "Sign again",
+"you_have_not_done_the_sign_yet": "You haven't signed yet!",
+"electronic_signature": "Electronic signature",
+"have_not_granted_location_access": "Have you not granted location access?",
+"number": "Number",
+"are_you_sure_you_want_to_sign_out": "Are you sure you want to sign out?",
+"agree": "Agree",
+"enter_address_application_below": "Enter the application address below"
 }
