--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -184,5 +184,6 @@
 "agree":"동의",
 "enter_address_application_below":"아래에 앱 주소를 입력하세요",
 "this_email_is_invalid":"Email không hợp lệ",
-"turn_on_login_with_finger_print_faceid":"Bật đăng nhập với vân tay, khuôn mặt"
+"turn_on_login_with_finger_print_faceid":"Bật đăng nhập với vân tay, khuôn mặt",
+"you_did_not_enter_a_number_phone":"Bạn chưa nhập số điện thoại"
 }
