--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -184,5 +184,6 @@
 "agree":"Đồng ý",
 "enter_address_application_below":"Nhập địa chỉ ứng dụng bên dưới",
 "this_email_is_invalid":"Email không hợp lệ",
-"turn_on_login_with_finger_print_faceid":"Bật đăng nhập với vân tay, khuôn mặt"
+"turn_on_login_with_finger_print_faceid":"Bật đăng nhập với vân tay, khuôn mặt",
+"you_did_not_enter_a_number_phone":"Bạn chưa nhập số điện thoại"
 }
