Bổ sung các button chọn nhanh sản phẩm theo nhóm sản phẩm

--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -186,5 +186,6 @@
 "this_email_is_invalid":"Email không hợp lệ",
 "turn_on_login_with_finger_print_faceid":"Bật đăng nhập với vân tay, khuôn mặt",
 "you_did_not_enter_a_number_phone":"Bạn chưa nhập số điện thoại",
-"enter_the_quantity":"Nhập số lượng"
+"enter_the_quantity":"Nhập số lượng",
+"search":"Tìm"
 }
