--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -186,5 +186,6 @@
 "this_email_is_invalid":"잘못된 이메일",
 "turn_on_login_with_finger_print_faceid": "다음에 로그인하려면 로그인해야 합니다.",
 "you_did_not_enter_a_number_phone": "전화번호를 입력하지 않았습니다.i",
-"enter_the_quantity":"계속 입력"
+"enter_the_quantity":"계속 입력",
+"search":"Search"
 }
