--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -182,9 +182,9 @@
 "are_you_sure_you_want_to_sign_out": "Are you sure you want to sign out?",
 "agree": "Agree",
 "enter_address_application_below": "Enter the application address below",
-"this_email_is_invalid":"Email không hợp lệ",
-"turn_on_login_with_finger_print_faceid":"Bật đăng nhập với vân tay, khuôn mặt",
-"you_did_not_enter_a_number_phone":"Bạn chưa nhập số điện thoại",
+"this_email_is_invalid":"Email is not valid",
+"turn_on_login_with_finger_print_faceid":"Turn on login with fingerprint, face",
+"you_did_not_enter_a_number_phone":"You did not enter a phone number",
 "enter_the_quantity":"Enter the quantity",
 "search":"Search",
 "into_money":"Into money",
